usr/src/uts/common/io/ib/adapters/hermon/hermon_qp.c
@@ -580,7 +580,7 @@ hermon_qp_alloc(hermon_state_t *state, hermon_qp_info_t *qpinfo,
 	 * real work queue sizes (in wqes), real SGLs, and QP number
 	 */
 	if (queuesz_p != NULL) {
-		queuesz_p->cs_sq 	=
+		queuesz_p->cs_sq	=
 		    (1 << log_qp_sq_size) - qp->qp_sq_hdrmwqes;
 		queuesz_p->cs_sq_sgl	= qp->qp_sq_sgl;
 
@@ -1007,7 +1007,7 @@ hermon_special_qp_alloc(hermon_state_t *state, hermon_qp_info_t *qpinfo,
 	qp->qp_wqinfo.qa_location = HERMON_QUEUE_LOCATION_NORMAL;
 
 	status = hermon_queue_alloc(state, &qp->qp_wqinfo, sleepflag);
-	if (status != NULL) {
+	if (status != 0) {
 		status = IBT_INSUFF_RESOURCE;
 		goto spec_qpalloc_fail5a;
 	}
@@ -1684,7 +1684,7 @@ for_each_qp:
 	 * real work queue sizes (in wqes), real SGLs, and QP number
 	 */
 	if (queuesz_p != NULL) {
-		queuesz_p->cs_sq 	=
+		queuesz_p->cs_sq	=
 		    (1 << log_qp_sq_size) - qp->qp_sq_hdrmwqes;
 		queuesz_p->cs_sq_sgl	= qp->qp_sq_sgl;
 
